#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-23
2014-07-08 David Schneider
- Fix timing message

Tag: V00-01-22
2014-07-07 David Schneider
- Fix spelling in default_psana.cfg

Tag: V00-01-21
2014-07-07 David Schneider
- Add SplitScan mode.
  Basic implementation of master file:
  some external links are dangling during translation.
- Re-enable calibration unit tests.
  Use snapshot of calibration files. 
  pedestal appears to have changed, adjust unit test
 
Tag: V00-01-20
2014-07-03 David Schneider
- update to new pdsdata with BldEBeamV6

Tag: V00-01-19
2014-06-30 David Schneider
- Translate pixel gain V1 calibration data if present
- document quiet switch for no output

Tag: V00-01-18
2014-06-25 David Schneider
- report Translator event processing time as percentage of total time.
- add switches for splitting hdf5 into separate calib cycles.	

Tag: V00-01-17
2014-06-17 David Schneider
- update documentation about storing epics.

Tag: V00-01-16
2014-06-16 David Schneider
- switch from using stamp to event tag for deciding when to write
  epics pvs. trac ticket #310
- add unit test for translating timetool data

Tag: V00-01-15
2014-06-14 David Schneider
- add option to translate epics on every shot (don't check for change)
  short term solution for problem with translating timetool pv's that
  don't set sec/nsec
	
Tag: V00-01-14
2014-06-14 David Schneider
- regenerate with psddl V00-13-12: move default_psana.cfg into data subdir
- regenerate with psddldata V01-00-10: trac ticket #309
	
Tag: V00-01-13
2014-06-12 David
- move automatic translation config file into data subdir.

Tag: V00-01-12
2014-06-12 David